Handle the data transfer.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "paths": {
+      "sh-lib":["projects/shared/src/public-api.ts"]
+    },
     "target": "es2020",
     "module": "es2020",
     "lib": [
