done the graphql changes in appln

--- a/TestApi/appsettings.json
+++ b/TestApi/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TestDBconn": "Server=DESKTOP-10UD3S0\\LOCALSERVER;Database=MicroDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
