--- a/TestApi/TestApi.csproj
+++ b/TestApi/TestApi.csproj
@@ -5,18 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="graphiql" Version="2.0.0" />
-    <PackageReference Include="GraphQL" Version="4.6.1" />
-    <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="5.0.2" />
-    <PackageReference Include="GraphQL.SystemTextJson" Version="4.6.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.11">
-      <PrivateAssets>all</PrivateAssets>
+    <PackageReference Include="GraphQL.Server.Ui.Voyager" Version="5.2.0" />
+    <PackageReference Include="HotChocolate.AspNetCore" Version="12.6.0" />
+    <PackageReference Include="HotChocolate.Data.Entityframework" Version="12.6.0" />
+    <PackageReference Include="Microsoft.EntityframeworkCore.Design" Version="5.0.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityframeworkCore.SqlServer" Version="5.0.2" />
+    <!-- <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.0+m8.0.23" />
+    <PackageReference Include="MySqlConnector" Version="2.1.7" /> -->
   </ItemGroup>
 
 </Project>
