Crud operation changes

--- a/TestApi/appsettings.json
+++ b/TestApi/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TestDBconn": "Server=DESKTOP-10UD3S0\\LOCALSERVER;Database=MicroDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TestDBconn": "Server=DESKTOP-10UD3S0\\LOCALSERVER;Database=UserDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
